--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,5 @@
   "description": "Draw.io diagrams for Obsidian. This plugin introduces diagrams that can be included within notes or as stand-alone files. Diagrams are created as SVG files (although .drawio extensions are also supported).",
   "author": "Sam Greenhalgh",
   "authorUrl": "https://www.radicalresearch.co.uk/",
-  "isDesktopOnly": true
+  "isDesktopOnly": false
 }
